3.1/3.2 wavefront OBJ exporter issues with exporting curves #97095

Closed
opened 2022-04-06 09:55:25 +02:00 by mill mill · 16 comments

System Information
Operating system: Windows-10-10.0.19042-SP0 64 Bits
Graphics card: GeForce RTX 2080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 461.92

Blender Version
Broken: version: 3.1.2, branch: master, commit date: 2022-03-31 17:40, hash: cc66d1020c
Worked: (newest version of Blender that worked as expected)

Short description of error
[Please fill out a short description of the error here]

The WaveFront exporter does not handle curves.

Exact steps for others to reproduce the error
[Please describe the exact steps needed to reproduce the issue]
[Based on the default startup or an attached .blend file (as simple as possible)]

select a curve object. Then
File > export > wavefront obj > check curves as nurbs > export wavefront obj.
That exports an empty file.

Blender 2.9.3.6 can exports curves correctly.
only 3.1 and 3.2 has this problem.

**System Information** Operating system: Windows-10-10.0.19042-SP0 64 Bits Graphics card: GeForce RTX 2080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 461.92 **Blender Version** Broken: version: 3.1.2, branch: master, commit date: 2022-03-31 17:40, hash: `cc66d1020c` Worked: (newest version of Blender that worked as expected) **Short description of error** [Please fill out a short description of the error here] The WaveFront exporter does not handle curves. **Exact steps for others to reproduce the error** [Please describe the exact steps needed to reproduce the issue] [Based on the default startup or an attached .blend file (as simple as possible)] select a curve object. Then File > export > wavefront obj > check curves as nurbs > export wavefront obj. That exports an empty file. Blender 2.9.3.6 can exports curves correctly. only 3.1 and 3.2 has this problem.
Author

Added subscriber: @mill

Added subscriber: @mill
Member

Added subscriber: @OmarEmaraDev

Added subscriber: @OmarEmaraDev
Member

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'
Member

I can't replicate this issue on a simple Bezier curve. By an empty file, do you mean a literally empty file on the file system or just a file with no contents when imported again. If yes, can you attach that file here?

I can't replicate this issue on a simple Bezier curve. By an empty file, do you mean a literally empty file on the file system or just a file with no contents when imported again. If yes, can you attach that file here?
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Two things:

  • If I export a Bezier curve, this will not produce an empty file, but will export a mesh
  • If I export a Nurbs curve, this will not produce an empty file, but will export a nurbs curve

Is this the behavior you are experiencing?

Two things: - If I export a Bezier curve, this will not produce an empty file, but will export a mesh - If I export a Nurbs curve, this will not produce an empty file, but will export a nurbs curve Is this the behavior you are experiencing?

Added subscriber: @aras_p

Added subscriber: @aras_p
Author

I was always importing obj files in Maya.
I noticed that the file was not empty.
Just Maya can not import poly and bezier type curves.

blender ver2.93 blender ver3.1, ver3.2
Maya can import nurbs, poly nurbs,
I was always importing obj files in Maya. I noticed that the file was not empty. Just Maya can not import poly and bezier type curves. | | blender ver2.93 | blender ver3.1, ver3.2 | | -- | -- | -- | | Maya can import| nurbs, poly | nurbs,|
Member

Changed status from 'Needs User Info' to: 'Needs Triage'

Changed status from 'Needs User Info' to: 'Needs Triage'

@mill it would be helpful if you could attach a .blend file that shows the issue clearly, as well as indicating which export settings you have used. There are various curve/surface types possible, and various export settings, and so far it's not clear to me which combination is broken.

@mill it would be helpful if you could attach a .blend file that shows the issue clearly, as well as indicating which export settings you have used. There are various curve/surface types possible, and various export settings, and so far it's not clear to me which combination is broken.
Author

I atatched the blend file (ver3.1.2).

This time, exporting bezier curve crashes blender.curves.zip

settings.jpg
Yesterday it was not a problem.
I cleared the blender config files before open the file.

Maya2019 only can import nurbs curves.

I atatched the blend file (ver3.1.2). This time, exporting bezier curve crashes blender.[curves.zip](https://archive.blender.org/developer/F12979655/curves.zip) ![settings.jpg](https://archive.blender.org/developer/F12979657/settings.jpg) Yesterday it was not a problem. I cleared the blender config files before open the file. Maya2019 only can import nurbs curves.
Aras Pranckevicius changed title from blender 3.1 and 3.2 wavefront exporter is bloken to 3.1/3.2 wavefront OBJ exporter issues with exporting curves 2022-04-07 05:54:23 +02:00
Aras Pranckevicius self-assigned this 2022-04-07 05:54:23 +02:00

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

From what I can tell:

  • Blender obj exporter could never really export Bezier curves. It was always exporting them as line meshes, both with the pre-3.1 exporter and with the 3.1/3.2 exporter.
  • The 3.1/3.2 exporter does not export Poly curves at all. That's definitely a bug, I'm fixing it.
  • The 3.1/3.2 exporter crashes if within a single object you are mixing curves of different types (e.g. have a nurbs curve, and a bezier curve, both as separate segments, but in one object). That's also a bug, I'm fixing that.

I can't reproduce the crash with your attached .blend file though.

From what I can tell: - Blender obj exporter could never really export Bezier curves. It was always exporting them as line meshes, both with the pre-3.1 exporter and with the 3.1/3.2 exporter. - The 3.1/3.2 exporter does not export Poly curves at all. That's definitely a bug, I'm fixing it. - The 3.1/3.2 exporter crashes if within a single object you are mixing curves of different types (e.g. have a nurbs curve, and a bezier curve, both as separate segments, but in one object). That's also a bug, I'm fixing that. I can't reproduce the crash with your attached .blend file though.
Member

Since this is partly a regression (and a bug in a new feature): will set to High prio

Since this is partly a regression (and a bug in a new feature): will set to High prio

This issue was referenced by a3eb4027c2

This issue was referenced by a3eb4027c2383827b9f5beed709c54c53c7d6d20

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Bastien Montagne added this to the Pipeline, Assets & IO project 2023-02-09 15:40:49 +01:00
Bastien Montagne removed this from the Pipeline, Assets & IO project 2023-02-10 12:49:29 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#97095
No description provided.